export interface RentalDTO {
  rentalId: number,
  equipmentId: number,
  isReturned: boolean
}
