export interface RentalEquipment {
  id: number,
  equipmentID: number,
  count: number,
  startTime: string,
  endTime: string,
}


